<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.jonathan.comuni.Solicitar_evento"
    android:orientation="vertical"
    >

    <TextView
        android:id="@+id/mandar_solicitud"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ingrese_solicitud"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        />

    <TextView
        android:id="@+id/titulo_evento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo_evento"
        />
    <EditText
        android:id="@+id/edit_titulo_evento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <TextView
        android:id="@+id/fecha_evento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fecha_evento"
        />
    <ImageButton
        android:id="@+id/imagen_fecha"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/imagenbuttoncalendar"
        />
    <TextView
        android:id="@+id/fecha_registro_evento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    <TextView
        android:id="@+id/direccion_evento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/direccion_evento"
        />
    <EditText
        android:id="@+id/edit_direccion_evento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <TextView
        android:id="@+id/foto_evento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/foto_evento"
        />
    <EditText
        android:id="@+id/edit_foto_evento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <TextView
        android:id="@+id/descripcion_evento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/descripcion_evento"
        />
    <EditText
        android:id="@+id/edit_descripcion_evento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
