<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.jonathan.comuni.Editar_perfil"
    android:orientation="vertical"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
            <TextView
                android:id="@+id/modificar_datos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/modificar_datos"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                />

            <TextView
                android:id="@+id/email_perfil"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:id="@+id/editText2" />

            <TextView
                android:id="@+id/nombre_perfil"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nombre"
                />

            <EditText
                android:id="@+id/edit_nombre_perfil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

            <TextView
                android:id="@+id/apellido_perfil"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/apellido"
                />

            <EditText
                android:id="@+id/edit_apellido_perfil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

            <TextView
                android:id="@+id/contraseña_perfil"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/texto_contraseña"
                />

            <EditText
                android:id="@+id/edit_contraseña_perfil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                />

            <TextView
                android:id="@+id/repetir_contraseña_perfil"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/repetir_contraseña"
                />

            <EditText
                android:id="@+id/edit_repetir_contraseña_perfil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                />

            <TextView
                android:id="@+id/telefono_perfil"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/telefono"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/editText3"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:id="@+id/comuna_perfil"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/comuna"
                />

            <Spinner
                android:id="@+id/spin_comuna_perfil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </Spinner>

            <TextView
                android:id="@+id/direccion_perfil"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/direccion"
                />

            <EditText
                android:id="@+id/edit_direccion_perfil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

            <TextView
                android:id="@+id/fecha_nacimiento_perfil"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fecha_nacimiento"
                />

            <ImageButton
                android:id="@+id/imagen_nacimiento_perfil"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/imagenbuttoncalendar"
                />

            <TextView
                android:id="@+id/fecha_registro_perfil"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

            <Button
                android:id="@+id/boton_aceptar_perfil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/boton_aceptar"
                />
        </LinearLayout>
    </ScrollView>

</LinearLayout>
